# dominux_chat

./: .editorconfig  .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/libs/entity/: Cargo.toml
backend/libs/entity/src/: users.rs
backend/libs/migration/src/: m20220101_000001_create_users_table.rs
backend/src/: app.rs  main.rs
backend/src/apps/users/: repositories.rs  routers.rs  schemas.rs  services.rs
backend/src/common/: app_state.rs  config.rs  db.rs  errors.rs  mod.rs
