[package]
name = "dominux_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = { version = "0.6.18", features = ["tokio"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"], default_features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]} 
futures = "0.3.25"

serde = { version = "1.0.164", features = [ "derive" ] }

sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

thiserror = "1.0.40"

uuid = { version = "1.3.3", features = ["serde", "v4"] }

entity = { path = "./libs/entity" }
migration = { path = "./libs/migration" }

[dev.dependencies]
axum-test-helper = "0.3.0"
serde_json = "1.0.96"
